--- a/src/app/products/product-edit.component.html
+++ b/src/app/products/product-edit.component.html
@@ -4,86 +4,28 @@
     </div>
 
     <div class="panel-body" *ngIf="product">
-        <form class="form-horizontal"
-              novalidate
-              (ngSubmit)="saveProduct()"
-              #productForm="ngForm" >
-            <fieldset>
-                <div class="form-group" 
-                     [ngClass]="{'has-error': (productNameVar.touched || 
-                                               productNameVar.dirty) && 
-                                               !productNameVar.valid }">
-                    <label class="col-md-2 control-label" 
-                           for="productNameId">Product Name</label>
+        <div class="wizard">
+            <a [routerLink]="['/products', product.id, 'edit', 'info']">
+                Info
+            </a>
+            <a [routerLink]="['tags']">
+                Search Tags
+            </a>
+        </div>
 
-                    <div class="col-md-8">
-                        <input class="form-control" 
-                                id="productNameId" 
-                                type="text" 
-                                placeholder="Name (required)"
-                                required
-                                minlength="3"
-                                [(ngModel)] = product.productName
-                                name="productName"
-                                #productNameVar="ngModel" />
-                        <span class="help-block" *ngIf="(productNameVar.touched ||
-                                                         productNameVar.dirty) &&
-                                                         productNameVar.errors">
-                            <span *ngIf="productNameVar.errors.required">
-                                Product name is required.
-                            </span>
-                            <span *ngIf="productNameVar.errors.minlength">
-                                Product name must be at least three characters.
-                            </span>
-                        </span>
-                    </div>
-                </div>
-                
-                <div class="form-group" 
-                     [ngClass]="{'has-error': (productCodeVar.touched || 
-                                               productCodeVar.dirty) && 
-                                               !productCodeVar.valid }">
-                    <label class="col-md-2 control-label" for="productCodeId">Product Code</label>
 
-                    <div class="col-md-8">
-                        <input class="form-control" 
-                                id="productCodeId" 
-                                type="text" 
-                                placeholder="Code (required)"
-                                required
-                                [(ngModel)] = product.productCode
-                                name="productCode"
-                                #productCodeVar="ngModel" />
-                        <span class="help-block" *ngIf="(productCodeVar.touched ||
-                                                         productCodeVar.dirty) &&
-                                                         productCodeVar.errors">
-                            <span *ngIf="productCodeVar.errors.required">
-                                Product code is required.
-                            </span>
-                        </span>
-                    </div>
-                </div>
-                
-                <div class="form-group">
-                    <label class="col-md-2 control-label" for="descriptionId">Description</label>
+        <div class="has-error" *ngIf="errorMessage">{{errorMessage}}</div>
 
-                    <div class="col-md-8">
-                        <textarea class="form-control" 
-                                id="descriptionId" 
-                                placeholder="Description"
-                                rows=3
-                                [(ngModel)] = product.description
-                                name="description"></textarea>
-                    </div>
-                </div>
+        <router-outlet></router-outlet>
 
-                <div class="form-group">
-                    <div class="col-md-4 col-md-offset-2">
-                        <span>
+        <div class="panel-footer">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-2">
+                    <span>
                             <button class="btn btn-primary"
                                     type="submit"
                                     style="width:80px;margin-right:10px"
-                                    [disabled]="!productForm.valid"
+                                    [disabled]="!isValid()"
                                     (click)="saveProduct()">
                                 Save
                             </button>
@@ -99,12 +41,10 @@
                                (click)="deleteProduct()">
                                 Delete
                             </a>
-                        </span>       
-                     </div>
+                        </span>   
                 </div>
-            </fieldset>
-        </form>
-        <div class="has-error" *ngIf="errorMessage">{{errorMessage}}</div>
+            </div>
+        </div>
     </div>
 
 </div>
