--- a/src/app/products/product-edit.component.html
+++ b/src/app/products/product-edit.component.html
@@ -5,11 +5,14 @@
 
     <div class="panel-body" *ngIf="product">
         <div class="wizard">
-            <a [routerLink]="['/products', product.id, 'edit', 'info']">
-                Info
+            <a [routerLink]="['/products', product.id, 'edit', 'info']"
+                routerLinkActive="active"
+                >
+                Info <span [ngClass]="{'glyphicon glyphicon-exclamation-sign': !isValid('info')}"></span>
             </a>
-            <a [routerLink]="['tags']">
-                Search Tags
+            <a [routerLink]="['tags']"
+                routerLinkActive="active">
+                Search Tags <span [ngClass]="{'glyphicon glyphicon-exclamation-sign': !isValid('tags')}"></span>
             </a>
         </div>
 
