--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,13 @@
                 <li *ngIf="authService.isLoggedIn()">
                     <a>Welcome {{ authService.currentUser.userName }}</a>
                 </li>
-                <li>
-                    <a>Show Messages</a>
+                <li *ngIf="!messageService.isDisplayed">
+                    <!--<a [routerLink]="[{outlets: { popup: ['messages'] }}]">Show Messages</a>-->
+                    <a (click)="displayMessages()">Show Messages</a>
+                </li>
+                <li *ngIf="messageService.isDisplayed">
+                    <!--<a [routerLink]="[{outlets: { popup: ['messages'] }}]">Show Messages</a>-->
+                    <a (click)="hideMessages()">Hide Messages</a>
                 </li>
                 <li *ngIf="!authService.isLoggedIn()">
                     <a routerLink="/login">Log In</a>
@@ -35,6 +40,13 @@
         </div>
     </nav>
     <div class="container">
-        <router-outlet></router-outlet>
+        <div class="row">
+        <div class="col-md-10">
+            <router-outlet></router-outlet>
+        </div>
+        <div class="col-md-2">
+            <router-outlet name="popup"></router-outlet>
+        </div>
+        
     </div>
 </div>
